test/compile_errors/stage1/obj/panic_called_at_compile_time.zig
export fn entry() void {
    comptime {
        @panic("aoeu",);
    }
}

// @panic called at compile time
//
// tmp.zig:3:9: error: encountered @panic at compile-time
